primer commit, estaba trabajando en otro repo, mude todo aca

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,23 @@
-spring.application.name=scafolding
-app.url=http://localhost:8080
-app.dev-name=Tu Nombre
-app.dev-email=tuemail@ejemplo.com
-app.name=Nombre de la API
-app.desc=Descripción de la API
+# External Services URLs
+characters.service.url=http://localhost:8081/api/characters
+random.service.url=http://localhost:8080/api/v1/dice
+
+# App Info
+app.name=match-be
+app.desc=Match Business Logic Service
 app.version=1.0.0
+app.url=http://localhost:5712
+app.dev-name=Your Name
+app.dev-email=your.email@example.com
+
+# SpringDoc
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Database
+spring.datasource.url=jdbc:mysql://mysql:3306/match-db
+spring.datasource.username=matchuser
+spring.datasource.password=matchpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
